# chatapp_test

webapp/: pyproject.toml
webapp/chat/: consumers.py  urls.py  views.py
webapp/chat/templates/chat/: index.html  room.html
webapp/core/: asgi.py  settings.py  urls.py
