[project]
name = "webapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Rajan66",email = "rajanmaharjan042@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "channels[daphne] (>=4.2.2,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "channels-redis (>=4.2.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "webapp", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
